--- a/Points_of_view/points/templates/contacts.html
+++ b/Points_of_view/points/templates/contacts.html
@@ -22,7 +22,7 @@
             <nav class="header-nav">
                 <ul class="header-nav-list">
                     <li class="header-nav-item">
-                        <a href="index.html" class="header-nav-link">
+                        <a href="{% url 'index' %}" class="header-nav-link">
                             О лаборатории
                         </a>
                     </li>
