add form to all pages

--- a/Points_of_view/points/templates/art-cartel.html
+++ b/Points_of_view/points/templates/art-cartel.html
@@ -43,7 +43,19 @@
                     </li>
                 </ul>
             </nav>
-            
+            <form action="{% url 'set_language' %}" method="post">
+                {% csrf_token %}
+                <input name="next" type="hidden" value="{{ redirect_to }}">
+                {% get_available_languages as LANGUAGES %}
+                {% for lang_code, lang_name in LANGUAGES %}
+                <label class="toggle">
+                    <input type="checkbox" name="language" value="{{ lang_code }}">
+                    <span class="slider"></span>
+                    {{ lang_name }}
+                </label>
+                {% endfor %}
+                <button type="submit">Выбрать</button>
+            </form>
             <ul class="contacts">
                 <li class="contacts-item">
                     <a href="tel:+79169552926">
