--- a/Points_of_view/points/static/style/index.css
+++ b/Points_of_view/points/static/style/index.css
@@ -366,8 +366,6 @@ body {
     display: flex;
     gap: 50px;
     position: relative;
-    /* transform: translateX(-242px); */
-    transition: transform 0.5s ease-in-out;
 }
 
 .team-carousel-card {
@@ -384,6 +382,7 @@ body {
 
 .team-carousel-photo {
     grid-area: photo;
+    border-radius: 50%;
 }
 
 .team-carousel-name {
@@ -408,6 +407,7 @@ body {
     position: absolute;
     height: 26px;
     width: 26px;
+    padding: 0;
     border-radius: 50%;
 }
 
@@ -426,12 +426,12 @@ body {
 
 .team-carousel-btn-left {
     top: 130px;
-    left: 362px;
+    left: 368px;
 }
 
 .team-carousel-btn-right {
     top: 130px;
-    left: 1010px;
+    left: 1016px;
 }
 
 .footer {
