--- a/Points_of_view/points/templates/art-cartel.html
+++ b/Points_of_view/points/templates/art-cartel.html
@@ -108,7 +108,11 @@
                 <p class="hero-text">
                     Университеты не там где диктуют, но там где дискутируют.
                 </p>
-                <button class="hero-btn">
+                <button class="hero-btn" onclick="window.scrollTo({
+                    top: 660,
+                    left: 0,
+                    behavior: 'smooth'
+                    })">
                     Подробнее
                 </button>
             </div>
