--- a/Points_of_view/points/templates/index.html
+++ b/Points_of_view/points/templates/index.html
@@ -105,7 +105,11 @@
                 <p class="hero-text">
                     {% translate 'Арт-лаборатория, открывающая искусство по-новому' %}.
                 </p>
-                <button class="hero-btn">
+                <button class="hero-btn" onclick="window.scrollTo({
+                    top: 660,
+                    left: 0,
+                    behavior: 'smooth'
+                    })">
                     {% translate 'Подробнее' %}
                 </button>
             </div>
