--- a/Points_of_view/points/templates/naive-questions.html
+++ b/Points_of_view/points/templates/naive-questions.html
@@ -103,7 +103,11 @@
                 <p class="hero-text">
                     Человеку интересен человек.
                 </p>
-                <button class="hero-btn">
+                <button class="hero-btn" onclick="window.scrollTo({
+                    top: 720,
+                    left: 0,
+                    behavior: 'smooth'
+                    })">
                     Подробнее
                 </button>
             </div>
