--- a/Points_of_view/points/static/style/naive-questions.css
+++ b/Points_of_view/points/static/style/naive-questions.css
@@ -268,6 +268,20 @@ body {
     display: flex;
     flex-direction: column;
     align-content: center;
+    background-repeat: no-repeat;
+    background-position: top 20px left 105px;
+}
+
+.skills-item-1 {
+    background-image: url('../img/naive-skills-1.svg');
+}
+
+.skills-item-2 {
+    background-image: url('../img/naive-skills-2.svg');
+}
+
+.skills-item-3 {
+    background-image: url('../img/naive-skills-3.svg');
 }
 
 .skills-list-subtitle {
